# communication-dashboard

./: .gitignore  .swiftlint.yml  Package.swift  README.md  TESTING.md  TEST_PLAN.md  project.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_writer_result.json
.github/workflows/: ci.yml  test.yml
CommBoard/: CommBoardApp.swift  ContentView.swift
CommBoard/App/: MockURLProtocol.swift
CommBoard/Config/: ConfigManager.swift
CommBoard/Data/: DatabaseManager.swift
CommBoard/Extensions/: AppTheme.swift  Color+Hex.swift
CommBoard/Models/: AppConfig.swift  AppNotification.swift  PluginConfig.swift  WidgetLayout.swift
CommBoard/Plugins/: PluginProtocol.swift  PluginRegistry.swift  PluginScheduler.swift
CommBoard/ViewModels/: DashboardViewModel.swift  EditModeViewModel.swift  StatusBarViewModel.swift  WidgetContainerViewModel.swift  WidgetGridViewModel.swift  WidgetHeaderViewModel.swift
CommBoard/Views/: AddWidgetPopover.swift  DashboardView.swift  EditModeView.swift  EditableWidgetContainer.swift  SizeSelector.swift  StatusBar.swift  WidgetContainer.swift  WidgetGridView.swift  WidgetHeader.swift
CommBoardTests/: ConfigManagerTests.swift  DashboardViewTests.swift  DatabaseManagerTests.swift  EditModeViewModelTests.swift  PluginProtocolTests.swift  PluginRegistryTests.swift  PluginSchedulerTests.swift  StatusBarTests.swift  WidgetContainerTests.swift  WidgetGridViewTests.swift  WidgetHeaderTests.swift
CommBoardUITests/: CommBoardUITests.swift  CommBoardUITestsLaunchTests.swift  DBIsolationTests.swift  DashboardWidgetGridTests.swift  EditModeTests.swift  MockModeTests.swift  SmokeTests.swift
CommBoardUITests/Fixtures/: config.json  notifications.json  plugin_github.json
CommBoardUITests/Helpers/: FixtureLoader.swift  UITestBase.swift
Sources/CommBoard/: CommBoard.swift
Sources/CommBoard/App/: ContentView.swift  main.swift
Sources/CommBoard/Config/: ConfigManager.swift
Sources/CommBoard/Data/: ConfigManager.swift  DatabaseManager.swift  DatabaseSchema.swift
Sources/CommBoard/Database/: DatabaseManager.swift
Sources/CommBoard/Models/: Notification.swift  NotificationRecord.swift  Placeholder.swift  WidgetLayout.swift
Sources/CommBoard/Plugin/: PluginProtocol.swift  PluginRegistry.swift  PluginScheduler.swift
Sources/CommBoard/Plugins/: PluginProtocol.swift  PluginRegistry.swift  PluginScheduler.swift
Sources/CommBoard/Resources/: README.md
Sources/CommBoard/Views/: PlaceholderView.swift
Sources/CommBoardApp/: CommBoardApp.swift  ContentView.swift
Sources/CommunicationDashboard/: CommunicationDashboardApp.swift  CommunicationDashboardService.swift  ConfigManager.swift  ConfigService.swift  ContentView.swift  DatabaseManager.swift  PluginProtocol.swift  PluginRegistry.swift  PluginScheduler.swift
Sources/CommunicationDashboard/Fixtures/: FixtureLoader.swift  FixtureLoaderError.swift  FixtureModels.swift
Sources/CommunicationDashboard/Network/: HTTPClient.swift  HTTPClientError.swift  MockHTTPClient.swift
Sources/CommunicationDashboard/Plugins/: CalendarPlugin.swift  GitHubPlugin.swift  GmailPlugin.swift  LinearPlugin.swift  Plugin.swift  SlackPlugin.swift
Sources/CommunicationDashboard/Shell/: MockShellExecutor.swift  ShellExecutor.swift  ShellExecutorError.swift
Sources/TestInfrastructure/: FixtureLoader.swift  MockHTTPServer.swift  MockShellExecutor.swift  ShellExecutorProtocol.swift  TestInfrastructureError.swift
Tests/: TestInfrastructure_README.md
Tests/CommBoardTests/: ConfigManagerTests.swift  DatabaseManagerTests.swift  DatabaseSchemaTests.swift  PluginProtocolTests.swift  PluginRegistryTests.swift  PluginSchedulerTests.swift
Tests/CommBoardTests/Config/: ConfigManagerTests.swift
Tests/CommBoardTests/Database/: DatabaseMigrationTests.swift
Tests/CommBoardTests/Plugin/: MockPlugin.swift  PluginProtocolTests.swift  PluginRegistryTests.swift  PluginSchedulerTests.swift
Tests/CommBoardUITests/: AppSmokeTests.swift
Tests/CommBoardUITests/Fixtures/: config.yaml
Tests/CommBoardUITests/Helpers/: MockURLProtocol.swift  TestEnvironment.swift
Tests/CommunicationDashboardTests/: AppStructureTests.swift  ConfigManagerTests.swift  ConfigServiceTests.swift  DatabaseManagerTests.swift  PluginRegistryTests.swift  PluginSchedulerTests.swift
Tests/CommunicationDashboardTests/E2E/: FixtureLoaderTests.swift  HTTPClientTests.swift  IntegrationTests.swift  README.md  ShellExecutorTests.swift
Tests/CommunicationDashboardTests/Fixtures/: calendar_events.json  config.yaml  github_notifications.json  gmail_messages.json  (+2 more)
Tests/TestInfrastructureTests/: E2EInfrastructureIntegrationTests.swift  FixtureLoaderTests.swift  MockHTTPServerTests.swift  MockShellExecutorTests.swift
app/plugins/: base.py
backend/: __init__.py
backend/api/: __init__.py  dependencies.py  main.py  schemas.py
backend/database/: __init__.py  connection.py  layout_repository.py  repository.py
backend/models/: plugin.py
backend/plugins/: __init__.py  base.py  exceptions.py  mock_plugin.py  schemas.py  slack_client.py  slack_plugin.py
backend/scheduler/: __init__.py  plugin_scheduler.py
backend/tests/: __init__.py  conftest.py
frontend/: README.md  TEST_README.md  package-lock.json  package.json  test-summary.json  tsconfig.app.json  vitest.config.ts
frontend/src/: App.tsx  index.css
src/: __init__.py
src/communication_dashboard/: __init__.py  scheduler.py
src/plugins/: __init__.py  base.py  models.py
tests/: __init__.py  conftest.py  test_connection.py  test_db.py  test_migration.py  test_plugin.py  test_scheduler.py
tests/plugins/: __init__.py  test_base.py  test_base_plugin.py  test_models.py  test_plugin_interface.py  test_schemas.py
tests/test_api/: __init__.py  test_layouts_router.py  test_plugins_router.py
tests/test_database/: __init__.py  test_connection.py  test_crud.py  test_layout_repository.py
tests/test_plugins/: README.md  test_base.py  test_mock_plugin.py  test_plugin_interface.py  test_slack_client.py  test_slack_plugin.py
tests/test_scheduler/: README.md  __init__.py  test_plugin_scheduler.py
(+60 files in other folders)
